# selenium-wrapper

./: README.md  pyproject.toml  usitsupport.info
example/: amazon.ipynb  chrome.yml  steps.py  steps.yml
src/: chrome.py
